--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     
                     <ul class="studypackets">
                         <li><a href="resources/data/studypackets/Math%2030%20-%20Polynomials.pdf"> Math 30 - Polynomials</a></li>   
-                        <li><a href="resources/Math%2010C%20Pre-IB%20-%20Coordinate%20Geometry.pdf"> Math 10C - Algebra</a></li>  
-                        <li><a href="resources/data/studypackets/Math%2010C%20Pre-%20Algebra.pdf"> Math 10C Pre-IB- Coordinate Geometry</a></li>  
+                        <li><a href="resources/Math%2010C%20Pre-IB%20-%20Coordinate%20Geometry.pdf"> Math 10C Pre-IB - Coordinate Geometry</a></li>  
+                        <li><a href="resources/data/studypackets/Math%2010C%20Pre-%20Algebra.pdf"> Math 10C - Algebra</a></li>  
                     </ul>
                         
                 </div>
