--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <i class="ion-leaf icon-bio icon-subjects"></i>
                     
                     <ul class="studypackets">
-                        <li><a href="resources/data/studypackets/Physics%2020%20-Kinematics.pdf"> Bio 30 - Reproduction</a></li>   
+                        <li><a href="resources/data/studypackets/Physics%2020%20-%20Kinematics.pdf"> Bio 30 - Reproduction</a></li>   
                     </ul>     
                 </div>
             </div>
