--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <i class="ion-leaf icon-bio icon-subjects"></i>
                     
                     <ul class="studypackets">
-                        <li><a href="resources/data/studypackets/Physics%2020%20-%20Kinematics.pdf"> Bio 30 - Reproduction</a></li>   
+                        <li><a href="resources/data/studypackets/Biology%2020IB%20-%20Biochemistry.pdf"> Bio 20IB - Biochemistry</a></li>
                     </ul>     
                 </div>
             </div>
