Revert "Code Refactored"
This reverts commit 57fdaed9a18f35618270cee5ef4a3ddb3cbdb9c1.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <i class="icon ion-planet icon-physics icon-subjects"></i>
                     
                      <ul class="studypackets">
-                        <li><a href="resources/data/studypackets/Physics%2020%20-%20Kinematics.pdf"> Physics 20 - Kinematics</a></li>   
+                        <li><a href="resources/data/studypackets/Physics%2020%20-Kinematics.pdf"> Physics 20 - Kinematics</a></li>   
                     </ul>                          
                 </div>
 
