--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
-        <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
+        <link rel="stylesheet" type="text/css" href="studyspacewchs.github.io/vendors/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="studyspacewchs.github.io/vendors/css/grid.css">
+        <link rel="stylesheet" type="text/css" href="studyspacewchs.github.io/vendors/css/ionicons.min.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
         <link rel="stylesheet" type="text/css" href="resources/css/queries.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400" rel="stylesheet"> 
